# currency-scraper

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
currency_scraper/: database.py  main.py  models.py  scraper.py
tests/: test_database.py  test_main.py  test_scraper.py  test_singleton.py
